フロントエンドに伴うバックエンド側の修正

--- a/docs/実装計画書.md
+++ b/docs/実装計画書.md
@@ -72,8 +72,8 @@
 ### 3-1. リアルタイム通信とUI連携
 
 - [x]  **MVP:** ポーリング (3秒間隔)
-- [ ]  **Todo:** WebSocketサーバー（Backend）の実装
-- [ ]  **Todo:** WebSocketクライアント（Frontend）と通知トレイの実装
+- [ ]  **Todo:** SSEサーバー（Backend）の実装
+- [ ]  **Todo:** SSEクライアント（Frontend）と通知トレイの実装
 - [ ]  **Todo:** 詳細進捗バー（解析フェーズの可視化）の実装
 
 ### 3-2. フィードバック詳細画面の拡張
