--- a/docs/設計資料集.md
+++ b/docs/設計資料集.md
@@ -8,7 +8,7 @@
 
 - **役割:** Next.jsによるダッシュボードと管理画面の提供。
 - **リアルタイム通知:** 画面左下に、処理の状態や完了を即座に知らせる通知機能を搭載します。
-- **WebSocketクライアント:** サーバーからの「解析完了」や「エラー」をリアルタイムに受信し、画面をリロードせずに状態を更新します。
+- **SSEクライアント:** サーバーからの「解析完了」や「エラー」をリアルタイムに受信し、画面をリロードせずに状態を更新します。
 - **詳細進捗バー:** `PDF解析中...` → `知見を検索中...` → `AI回答作成中...` といった、Workerから届く細かなフェーズを表示します。
 
 ### 2. バックエンドコンテナ (Operating System)
@@ -19,7 +19,7 @@
 - **Google OAuth認証:** 大学アカウント（@ed.waseda.jp等）によるログイン制限を実装します。
 - **ロール自動切替:** DBに登録されたメールアドレスに基づき、管理者・教授・学生の権限を自動付与します。
 - **ゾンビタスク監視（Watcher）:** `Processing`状態のまま10分経過したタスクを検知し、自動で`Error`へ変更、または再投入します。
-- **WebSocketサーバー:** Workerからの進捗報告を受け取り、フロントエンドへ即座に転送するハブとなります。
+- **SSEサーバー:** Workerからの進捗報告を受け取り、フロントエンドへ即座に転送するハブとなります。
 - **DBマイグレーション統合:** 起動時に `pgvector` の有効化と、最新のテーブル定義（Alembic/SQL）を自動適用します。
 
 ### 3. PDF(TeX)→Text/Markdown パースコンテナ
@@ -82,7 +82,7 @@ Ollamaを基盤とした、推論に特化した脳の部分です。
         - **タブ切替:** 「マイ・レポート（添削履歴）」と「ライブラリ（参考論文・集合知）」。
         - **プロジェクトカード:** 論文タイトルごとに集約。現在の最新ステータス（解析中/完了/エラー）をバッジで表示。
         - **バージョン履歴:** カード展開時に、V1, V2...とリスト表示し、それぞれのフィードバックへ飛べるようにします。
-    - **通知トレイ（左下常駐）:** WebSocket接続状態、現在実行中のタスク名（キュー待ち数）、詳細な進捗ステップを表示。
+    - **通知トレイ（左下常駐）:** SSE接続状態、現在実行中のタスク名（キュー待ち数）、詳細な進捗ステップを表示。
 3. 論文アップロード・モーダル
     - **モード選択:** 「フィードバックを受ける」or「参考論文として登録（RAG用）」。
     - **ファイル選択:** PDF/TeX/ZIP（複数ファイル用）に対応。ドラッグ＆ドロップ。
@@ -143,7 +143,7 @@ Ollamaを基盤とした、推論に特化した脳の部分です。
 5. **Worker (RAG & LLM)**: 類似論文検索（RAG）とLLM推論（5分タイムアウト/3回リトライ）。
 6. **Worker (完了確認)**: **Storageから「Drive保存完了」のシグナルを確認。**
 7. **Worker (報告)**: DB更新、Redisへ完了通知をパブリッシュ。
-8. **Backend**: WebSocket経由で通知。**フロント側は通知受信時に「最新のFBリスト」を自動再取得。**
+8. **Backend**: SSE経由で通知。**フロント側は通知受信時に「最新のFBリスト」を自動再取得。**
 
 ## キャッシュ管理フロー
 
@@ -168,7 +168,7 @@ Ollamaを基盤とした、推論に特化した脳の部分です。
     1. **アップロード**: PDF（必須）と、あればMD/TXTを選択。学会メタデータを選択。
     2. **受付**: 「サーバーが受け取りました」のメッセージと共にダッシュボードへ戻る。
     3. **表示**: ダッシュボード左下の通知欄に「[論文名] 解析中... (1/3: 構造解析中)」のような詳細進捗を表示。
-        - ※WorkerがDBの `inference_tasks.status` を更新するたびにBackendがWebSocketで流します。
+        - ※WorkerがDBの `inference_tasks.status` を更新するたびにBackendがSSEで流します。
     4. **完了**: 通知トレイが緑色に光り、「解析が完了しました」と表示。
 - 論文アップロード (参考論文)
     
@@ -376,7 +376,7 @@ AI Workerが出力した最終成果。
 
 ### システム・リアルタイム系
 
-- `WS /ws/notifications`: WebSocketによる進捗プッシュ通知。
+- `WS /ws/notifications`: SSEによる進捗プッシュ通知。
 - `GET /tasks/{task_id}`: 特定タスクの現在のステータス詳細。
 
 ---
